# cartoon_classifier

./: CMakeLists.txt  model.json
src/: main.cpp
